// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:ReactPanel displays a message when an error has occurred 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div />
  <h4 />
</section>
`;

exports[`component:ReactPanel displays a message when only the narratives are stale 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <span
        className="m-notification_icon cf-icon"
      />
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of consumer complaint narratives on the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <ul
    className="cards-panel"
  >
    <li
      className="card-container"
    >
      <div
        className="layout-row"
      >
        <h3
          className="to-detail"
        >
          1
          . 
          <a
            href="detail/1234"
          >
            ABC Corp
          </a>
        </h3>
      </div>
      <div
        className="card"
      >
        <div
          className="card-left layout-column"
        >
          <h4>
            Issuer name
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Acme Bank",
              }
            }
          />
          <br />
          <h4>
            Initial offer date
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "1/1/18",
              }
            }
          />
          <br />
          <h4>
            Program withdrawal date
          </h4>
          <span>
            Not applicable, still active
          </span>
        </div>
        <div
          className="card-right layout-column"
        >
          <h4>
            Download most recent agreements for this card
          </h4>
          <p>
            <br />
            <a
              href="https://consumerfinance.gov"
            >
              ABC Corp
            </a>
             (
            110KB
            )
          </p>
          <p>
            <a
              href="detail/1234"
            >
              View all agreements for 
              ABC Corp
            </a>
          </p>
        </div>
      </div>
    </li>
  </ul>
  <nav
    aria-label="Pagination"
    className="m-pagination"
    role="navigation"
  >
    <button
      className="a-btn m-pagination_btn-prev"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="a-btn_icon a-btn_icon__on-left cf-icon cf-icon__before cf-icon-left"
      />
      Previous
    </button>
    <button
      className="a-btn m-pagination_btn-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <span
        className="a-btn_icon a-btn_icon__on-right cf-icon cf-icon__after cf-icon-right"
      />
    </button>
    <form
      action=""
      className="m-pagination_form"
      onSubmit={[Function]}
    >
      <label
        className="m-pagination_label"
        htmlFor="m-pagination_current-page"
      >
        Page
        <span
          className="u-visually-hidden"
        >
          number 
          1
           out
        </span>
        <input
          className="m-pagination_current-page"
          id="m-pagination_current-page"
          inputMode="numeric"
          max={1}
          min="1"
          name="page"
          onChange={[Function]}
          pattern="[0-9]*"
          type="number"
          value={1}
        />
        of 
        <span>
          1
        </span>
      </label>
      <button
        className="a-btn a-btn__link m-pagination_btn-submit"
        id="m-pagination_btn-submit"
        type="submit"
      >
        Go
      </button>
    </form>
  </nav>
</section>
`;

exports[`component:ReactPanel displays a message when the data has issues 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div
    className="m-notification m-notification__visible m-notification__warning"
  >
    <span
      className="m-notification_icon cf-icon"
    />
    <div
      className="m-notification_content"
    >
      <div
        className="h4 m-notification_message"
      >
        We’re currently experiencing technical issues that have delayed the refresh of data on the Consumer Complaint Database.  We expect to refresh the data in the next few days.
      </div>
    </div>
  </div>
  <div />
  <ul
    className="cards-panel"
  >
    <li
      className="card-container"
    >
      <div
        className="layout-row"
      >
        <h3
          className="to-detail"
        >
          1
          . 
          <a
            href="detail/1234"
          >
            ABC Corp
          </a>
        </h3>
      </div>
      <div
        className="card"
      >
        <div
          className="card-left layout-column"
        >
          <h4>
            Issuer name
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Acme Bank",
              }
            }
          />
          <br />
          <h4>
            Initial offer date
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "1/1/18",
              }
            }
          />
          <br />
          <h4>
            Program withdrawal date
          </h4>
          <span>
            Not applicable, still active
          </span>
        </div>
        <div
          className="card-right layout-column"
        >
          <h4>
            Download most recent agreements for this card
          </h4>
          <p>
            <br />
            <a
              href="https://consumerfinance.gov"
            >
              ABC Corp
            </a>
             (
            110KB
            )
          </p>
          <p>
            <a
              href="detail/1234"
            >
              View all agreements for 
              ABC Corp
            </a>
          </p>
        </div>
      </div>
    </li>
  </ul>
  <nav
    aria-label="Pagination"
    className="m-pagination"
    role="navigation"
  >
    <button
      className="a-btn m-pagination_btn-prev"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="a-btn_icon a-btn_icon__on-left cf-icon cf-icon__before cf-icon-left"
      />
      Previous
    </button>
    <button
      className="a-btn m-pagination_btn-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <span
        className="a-btn_icon a-btn_icon__on-right cf-icon cf-icon__after cf-icon-right"
      />
    </button>
    <form
      action=""
      className="m-pagination_form"
      onSubmit={[Function]}
    >
      <label
        className="m-pagination_label"
        htmlFor="m-pagination_current-page"
      >
        Page
        <span
          className="u-visually-hidden"
        >
          number 
          1
           out
        </span>
        <input
          className="m-pagination_current-page"
          id="m-pagination_current-page"
          inputMode="numeric"
          max={1}
          min="1"
          name="page"
          onChange={[Function]}
          pattern="[0-9]*"
          type="number"
          value={1}
        />
        of 
        <span>
          1
        </span>
      </label>
      <button
        className="a-btn a-btn__link m-pagination_btn-submit"
        id="m-pagination_btn-submit"
        type="submit"
      >
        Go
      </button>
    </form>
  </nav>
</section>
`;

exports[`component:ReactPanel displays a message when the data is stale 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <span
        className="m-notification_icon cf-icon"
      />
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of data in the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <ul
    className="cards-panel"
  >
    <li
      className="card-container"
    >
      <div
        className="layout-row"
      >
        <h3
          className="to-detail"
        >
          1
          . 
          <a
            href="detail/1234"
          >
            ABC Corp
          </a>
        </h3>
      </div>
      <div
        className="card"
      >
        <div
          className="card-left layout-column"
        >
          <h4>
            Issuer name
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Acme Bank",
              }
            }
          />
          <br />
          <h4>
            Initial offer date
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "1/1/18",
              }
            }
          />
          <br />
          <h4>
            Program withdrawal date
          </h4>
          <span>
            Not applicable, still active
          </span>
        </div>
        <div
          className="card-right layout-column"
        >
          <h4>
            Download most recent agreements for this card
          </h4>
          <p>
            <br />
            <a
              href="https://consumerfinance.gov"
            >
              ABC Corp
            </a>
             (
            110KB
            )
          </p>
          <p>
            <a
              href="detail/1234"
            >
              View all agreements for 
              ABC Corp
            </a>
          </p>
        </div>
      </div>
    </li>
  </ul>
  <nav
    aria-label="Pagination"
    className="m-pagination"
    role="navigation"
  >
    <button
      className="a-btn m-pagination_btn-prev"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="a-btn_icon a-btn_icon__on-left cf-icon cf-icon__before cf-icon-left"
      />
      Previous
    </button>
    <button
      className="a-btn m-pagination_btn-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <span
        className="a-btn_icon a-btn_icon__on-right cf-icon cf-icon__after cf-icon-right"
      />
    </button>
    <form
      action=""
      className="m-pagination_form"
      onSubmit={[Function]}
    >
      <label
        className="m-pagination_label"
        htmlFor="m-pagination_current-page"
      >
        Page
        <span
          className="u-visually-hidden"
        >
          number 
          1
           out
        </span>
        <input
          className="m-pagination_current-page"
          id="m-pagination_current-page"
          inputMode="numeric"
          max={1}
          min="1"
          name="page"
          onChange={[Function]}
          pattern="[0-9]*"
          type="number"
          value={1}
        />
        of 
        <span>
          1
        </span>
      </label>
      <button
        className="a-btn a-btn__link m-pagination_btn-submit"
        id="m-pagination_btn-submit"
        type="submit"
      >
        Go
      </button>
    </form>
  </nav>
</section>
`;

exports[`component:ReactPanel displays a message when there are no results 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div />
  <h2>
    No results were found for your search
  </h2>
</section>
`;

exports[`component:ReactPanel only displays data message when both types are stale 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <span
        className="m-notification_icon cf-icon"
      />
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of data in the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <ul
    className="cards-panel"
  >
    <li
      className="card-container"
    >
      <div
        className="layout-row"
      >
        <h3
          className="to-detail"
        >
          1
          . 
          <a
            href="detail/1234"
          >
            ABC Corp
          </a>
        </h3>
      </div>
      <div
        className="card"
      >
        <div
          className="card-left layout-column"
        >
          <h4>
            Issuer name
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Acme Bank",
              }
            }
          />
          <br />
          <h4>
            Initial offer date
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "1/1/18",
              }
            }
          />
          <br />
          <h4>
            Program withdrawal date
          </h4>
          <span>
            Not applicable, still active
          </span>
        </div>
        <div
          className="card-right layout-column"
        >
          <h4>
            Download most recent agreements for this card
          </h4>
          <p>
            <br />
            <a
              href="https://consumerfinance.gov"
            >
              ABC Corp
            </a>
             (
            110KB
            )
          </p>
          <p>
            <a
              href="detail/1234"
            >
              View all agreements for 
              ABC Corp
            </a>
          </p>
        </div>
      </div>
    </li>
  </ul>
  <nav
    aria-label="Pagination"
    className="m-pagination"
    role="navigation"
  >
    <button
      className="a-btn m-pagination_btn-prev"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="a-btn_icon a-btn_icon__on-left cf-icon cf-icon__before cf-icon-left"
      />
      Previous
    </button>
    <button
      className="a-btn m-pagination_btn-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <span
        className="a-btn_icon a-btn_icon__on-right cf-icon cf-icon__after cf-icon-right"
      />
    </button>
    <form
      action=""
      className="m-pagination_form"
      onSubmit={[Function]}
    >
      <label
        className="m-pagination_label"
        htmlFor="m-pagination_current-page"
      >
        Page
        <span
          className="u-visually-hidden"
        >
          number 
          1
           out
        </span>
        <input
          className="m-pagination_current-page"
          id="m-pagination_current-page"
          inputMode="numeric"
          max={1}
          min="1"
          name="page"
          onChange={[Function]}
          pattern="[0-9]*"
          type="number"
          value={1}
        />
        of 
        <span>
          1
        </span>
      </label>
      <button
        className="a-btn a-btn__link m-pagination_btn-submit"
        id="m-pagination_btn-submit"
        type="submit"
      >
        Go
      </button>
    </form>
  </nav>
</section>
`;

exports[`component:ReactPanel renders without crashing 1`] = `
<section
  className="results-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h4>
        Showing 
        <span>
          100
        </span>
         matched results
      </h4>
    </div>
  </summary>
  <div />
  <ul
    className="cards-panel"
  >
    <li
      className="card-container"
    >
      <div
        className="layout-row"
      >
        <h3
          className="to-detail"
        >
          1
          . 
          <a
            href="detail/1234"
          >
            ABC Corp
          </a>
        </h3>
      </div>
      <div
        className="card"
      >
        <div
          className="card-left layout-column"
        >
          <h4>
            Issuer name
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Acme Bank",
              }
            }
          />
          <br />
          <h4>
            Initial offer date
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "1/1/18",
              }
            }
          />
          <br />
          <h4>
            Program withdrawal date
          </h4>
          <span>
            Not applicable, still active
          </span>
        </div>
        <div
          className="card-right layout-column"
        >
          <h4>
            Download most recent agreements for this card
          </h4>
          <p>
            <br />
            <a
              href="https://consumerfinance.gov"
            >
              ABC Corp
            </a>
             (
            110KB
            )
          </p>
          <p>
            <a
              href="detail/1234"
            >
              View all agreements for 
              ABC Corp
            </a>
          </p>
        </div>
      </div>
    </li>
  </ul>
  <nav
    aria-label="Pagination"
    className="m-pagination"
    role="navigation"
  >
    <button
      className="a-btn m-pagination_btn-prev"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="a-btn_icon a-btn_icon__on-left cf-icon cf-icon__before cf-icon-left"
      />
      Previous
    </button>
    <button
      className="a-btn m-pagination_btn-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <span
        className="a-btn_icon a-btn_icon__on-right cf-icon cf-icon__after cf-icon-right"
      />
    </button>
    <form
      action=""
      className="m-pagination_form"
      onSubmit={[Function]}
    >
      <label
        className="m-pagination_label"
        htmlFor="m-pagination_current-page"
      >
        Page
        <span
          className="u-visually-hidden"
        >
          number 
          1
           out
        </span>
        <input
          className="m-pagination_current-page"
          id="m-pagination_current-page"
          inputMode="numeric"
          max={1}
          min="1"
          name="page"
          onChange={[Function]}
          pattern="[0-9]*"
          type="number"
          value={1}
        />
        of 
        <span>
          1
        </span>
      </label>
      <button
        className="a-btn a-btn__link m-pagination_btn-submit"
        id="m-pagination_btn-submit"
        type="submit"
      >
        Go
      </button>
    </form>
  </nav>
</section>
`;
